@@ -1,4 +1,6 @@
-package cn.restlibs.jvm.outmemory4;
+package cn.restlibs.jvm.jvmyouhua.outmemory1;
+
+import cn.restlibs.jvm.jvmyouhua.UserVO;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -9,7 +11,7 @@ public class OutMemoryError {
     // gc 回收不了 堆导致jvm奔溃
 //-XX:+HeapDumpOnOutOfMemoryError -Xms20m -Xmx20m  java.lang.OutOfMemoryError: Java heap space
 
- /* public static void main(String[] args) {
+  public static void main(String[] args) {
         List li=new ArrayList<UserVO>();       //gc 回收不了  是gc root
         while(true){
             try {
@@ -23,7 +25,7 @@ public class OutMemoryError {
             li.add(uservo);
         }
     }
-*/
+
 
     //gc 可以回收
 /*
@@ -50,7 +52,7 @@ public class OutMemoryError {
 
 
   //-Xss256k 影响不大
-    /* private int stackLength = 1;
+  /*   private int stackLength = 1;
     public void stackLeak() {
         stackLength++;
         stackLeak();
@@ -83,7 +85,7 @@ public class OutMemoryError {
     //java.lang.OutOfMemoryError: Java heap space  堆设置太小。先报堆了。
     // -Xss500M  堆不设置。线程太多。线程都阻塞。不能开新的线程。程序假死。 java.lang.OutOfMemoryError: unable to create new native thread
     //  Exception in thread "main" java.lang.OutOfMemoryError: unable to create new native thread 49441
-/*   private void dontStop() {
+    /*private void dontStop() {
         count++;
         System.out.println(count);
         try {
@@ -120,46 +122,21 @@ public class OutMemoryError {
 
     //   jdk8以前 方法区就是永久代。字符串放在永久代中
 //    之后 方法区是元空间。不在jvm 字符串放在堆中 -XX:MaxPermSize=5M  失效
-// -Xms20m -Xmx20m   -XX:MaxMetaspaceSize=30m -XX:+PrintGCDetails  -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=E:\Java\dump
-  public static void main(String[] args) {
+
+ /*   public static void main(String[] args) {
         // 使用List保持着常量池引用，避免Full GC回收常量池行为
         List<String> list = new ArrayList<String>();
         // 10MB的PermSize在integer范围内足够产生OOM了
         int i = 0;
         while (true) {
-            list.add(String.valueOf("hello jvm "+i++).intern());
+            list.add(String.valueOf(i++));
         }
-    }
-
-
-/*
-    Exception in thread "main" java.lang.OutOfMemoryError: Java heap space
-    at java.util.Arrays.copyOf(Arrays.java:3210)
-    at java.util.Arrays.copyOf(Arrays.java:3181)
-    at java.util.ArrayList.grow(ArrayList.java:265)
-    at java.util.ArrayList.ensureExplicitCapacity(ArrayList.java:239)
-    at java.util.ArrayList.ensureCapacityInternal(ArrayList.java:231)
-    at java.util.ArrayList.add(ArrayList.java:462)
-    at cn.restlibs.jvm.OutMemoryError.main(OutMemoryError.java:136)
-    Heap dump file created [24463871 bytes in 0.101 secs]
-    Heap
-    PSYoungGen      total 6144K, used 5560K [0x00000000ff980000, 0x0000000100000000, 0x0000000100000000)
-    eden space 5632K, 98% used [0x00000000ff980000,0x00000000ffeee208,0x00000000fff00000)
-    from space 512K, 0% used [0x00000000fff80000,0x00000000fff80000,0x0000000100000000)
-    to   space 512K, 0% used [0x00000000fff00000,0x00000000fff00000,0x00000000fff80000)
-    ParOldGen       total 13824K, used 13377K [0x00000000fec00000, 0x00000000ff980000, 0x00000000ff980000)
-    object space 13824K, 96% used [0x00000000fec00000,0x00000000ff9104c0,0x00000000ff980000)
-    Metaspace       used 3504K, capacity 4496K, committed 4864K, reserved 1056768K
-    class space    used 379K, capacity 388K, committed 512K, reserved 1048576K
-*/
-
-
+    }*/
 
 
     //方法区。jdk8中元数据。没有永久代  -XX:MaxPermSize=5M  失效
    // -Xms20m -Xmx20m   -XX:MaxMetaspaceSize=24m -XX:+PrintGCDetails
-    // -Xms20m -Xmx20m   -XX:MaxMetaspaceSize=30m -XX:+PrintGCDetails  -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=E:\Java\dump
-/*   public static void main(String[] args) {
+/*    public static void main(String[] args) {
        int i=0;
         while (true) {
             i++;
@@ -184,11 +161,8 @@ public class OutMemoryError {
 
     }*/
 
-/*
-    Metaspace       used 30145K, capacity 30292K, committed 30720K, reserved 1077248K    方法code
-    class space    used 2646K, capacity 2701K, committed 2816K, reserved 1048576K         class用了2兆
-    Caused by: java.lang.OutOfMemoryError: Metaspace
-*/
+
+    //Caused by: java.lang.OutOfMemoryError: Metaspace
 
 
 
